fix: localhost, feat: open chrome

--- a/lab4/templates/index.html
+++ b/lab4/templates/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Implementation of Internet Radio</title>
-  
+  <!--
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600'>
-<link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css'>
+<link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css'> -->
 
       <style>
       /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
@@ -932,7 +932,7 @@ input[type="range"] {
 
     </style>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>-->
 
 </head>
 
@@ -950,7 +950,7 @@ input[type="range"] {
       <div class="line line-3"></div>
     </label>
     <div class="mid-text">
-      <div class="title page-front-title">Fm radio</div>
+      <div class="title page-front-title">SNU radio</div>
       <div class="title page-saved-stations-title">All stations</div>
     </div>
     <label for="window-toggle-chk" class="right-action">
