feat: integrate changing radio

--- a/lab4/templates/index.html
+++ b/lab4/templates/index.html
@@ -962,9 +962,7 @@ input[type="range"] {
   <div class="page page-front">
     <div class="cover load-transition load-transition-delay-1">
       <div class="glow load-transition load-transition-delay-2"></div>
-      <ul class="tool-buttons">
-        <li>Play</li>
-      </ul>
+      
       <div class="current-station-text load-transition load-transition-delay-2">107.2</div>
       <div class="current-station-name-bar load-transition load-transition-delay-2">
         <div class="left-action fi-rewind"></div>
@@ -1068,17 +1066,16 @@ input[type="range"] {
   <div class="page page-saved-stations">
     <menu class="station-list">
       <ul>
-        <li><a class="link">Rix FM<span class="num">104.8</span></a></li>
-        <li class="active"><a class="link">NRJ radio
+        <li><a id="r5434" class="link">Rock FM<span class="num">5434</span></a></li>
+        <li class="active"><a id="r5432" class="link">POP FM
             <div class="bar-bouncer">
               <div class="bar bar1"></div>
               <div class="bar bar2"></div>
               <div class="bar bar3"></div>
-            </div><span class="num">107.2</span></a></li>
-        <li><a class="link">Motreal radio<span class="num">103.5</span></a></li>
-        <li> <a class="link">Soul music<span class="num">109.2</span></a></li>
-        <li> <a class="link">Rix FM<span class="num">105.9</span></a></li>
-        <li> <a class="link">Love radio<span class="num">96.3</span></a></li>
+            </div><span class="num">5432</span></a></li>
+        <li><a id="r5433" class="link">Classic FM<span class="num">5433</span></a></li>
+        <li> <a id="r5435" class="link">Hindi FM<span class="num">5435</span></a></li>
+        <li> <a id="r5436" class="link">Video<span class="num">5436</span></a></li>
       </ul>
     </menu>
   </div>
